2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: configure --with-jamvm-src-zip
	* NEWS: Updated.
	* Makefile.am (stamps/download-jamvm.stamp):
	Link in jamvm source zip dependent on USE_ALT_JAMVM_SRC_ZIP
	* acinclude.m4 (IT_CHECK_WITH_JAMVM_SRC_ZIP): New macro.
	(USE_ALT_JAMVM_SRC_ZIP): New conditional.
	(ALT_JAMVM_SRC_ZIP): New variable.
	* configure.ac: Call IT_CHECK_WITH_JAMVM_SRC_ZIP.

2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	* Makefile.am: (JAMVM_BASE_URL): Switch to using IcedTea
	server for JamVM drops too.
	(JAMVM_VERSION): Updated to latest JamVM revision.
	(JAMVM_SHA256SUM): Updated.

2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: Try --with-additional-vms=jamvm topping!
	* NEWS: Updated.
	* Makefile.am (stamps/add-jamvm.stamp): New make target.
	(clean-add-jamvm): Likewise.
	(stamps/add-jamvm-debug.stamp): Likewise.
	(clean-add-jamvm-debug): Likewise.
	(.PHONY): Add clean-add-jamvm and clean-add-jamvm-debug.
	(stamps/icedtea-stage2.stamp): Add stamps/add-jamvm.stamp.
	(clean-icedtea-stage2): Add clean-add-jamvm.
	(stamps/icedtea-debug-stage2.stamp):
	Add stamps/add-jamvm-debug.stamp.
	(clean-icedtea-debug-stage2): Add clean-add-jamvm-debug.
	* acinclude.m4 (IT_CHECK_ADDITIONAL_VMS):
	Set add_vm_jamvm if jamvm are found.
	(BUILD_JAMVM): Add check for add_vm_jamvm.
	(ADD_JAMVM_BUILD): New conditional dependent on add_vm_jamvm.

2011-02-22  Xerxes Ranby  <xranby@zafena.se>

	Fix icedtea-boot build with --enable-jamvm
	(stamps/icedtea-boot.stamp): Add stamps/jamvm.stamp

2011-05-20  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am:
	(HOTSPOT_CHANGESET): Test enhancement - make the test compatible with
	OpenJDK7/IcedTea7, disabling printing unnecessary information to error
	output.
	(HOTSPOT_SHA256SUM): Likewise

2011-05-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Fixed behaviour of regression test
	PrintAllXcheckJNI.java, added check if test frame is really initialized